move crypto utils folder and implement middleware
