# filemanager/controller.go
@@ -54,11 +54,13 @@ func Upload(c echo.Context) error {
 // @Tags files
 // @Accept json
 // @Param name query string true "File name"
+// @Param verificationdata query string false "Signed verification data"
 // @Produce octet-stream
 // @Success 200 {file} string true
 // @Failure 404 {string} string "File not found"
-// @Router /files/download [get]
+// @Router /file/download [get]
 func Download(c echo.Context) error {
+
 	// Read form field
 	name := c.QueryParam("name")
 
@@ -114,4 +116,57 @@ func GetAll(c echo.Context) error {
 	}
 
 	return c.JSON(http.StatusOK, fs)
+}
+
+// GetDataFile for the user to get a file
+// GetDataFile godoc
+// @Summary Download a file (for users)
+// @Description Download a file from the DXC
+// @Tags files
+// @Accept json
+// @Param did path string true "Digital identifier of the product bought"
+// @Param name query string true "File name"
+// @Param verificationdata query string true "Signed verification data"
+// @Produce octet-stream
+// @Success 200 {file} string true
+// @Failure 401 {string} string "Request not authorized. Signature and verification data invalid"
+// @Failure 404 {string} string "File not found"
+// @Router /getdata/{did}/file [get]
+func GetDataFile(c echo.Context) error {
+	// Read form field
+	// name := c.QueryParam("name")
+	// did := c.Param("did")
+
+	return c.String(http.StatusOK, "success JONY")
+
+	// var omit bool
+
+	// if len(os.Args) > 1 && os.Args[1][:5] == "-test" {
+	// 	omit = true
+	// }
+
+	// if !omit {
+	// 	_, err := database.DBInstance.GetFile(name)
+	// 	if err != nil {
+	// 		return c.String(http.StatusNotFound, "File not found")
+	// 	}
+	// }
+
+	// var filePath string
+
+	// if os.Getenv("GO_ENV") == "local" {
+	// 	filePath = os.Getenv("LOCAL_FILES_DIR")
+	// } else {
+	// 	filePath = "/var/files"
+	// }
+
+	// if omit {
+	// 	filePath = "/tmp"
+	// 	testdata := []byte("test")
+	// 	if err := ioutil.WriteFile(fmt.Sprintf("%s/%s", filePath, name), testdata, 0644); err != nil {
+	// 		return c.String(http.StatusNotFound, "File not found")
+	// 	}
+	// }
+
+	// return c.Attachment(fmt.Sprintf("%s/%s", filePath, name), name)
 }
